# webbot2

./: .env  .env.example  .gitignore  20260331_072636_ALTA_2015_December_graph.json  README.md  SKILL.md  pyproject.toml  start-webbot2.sh  webbot2-banner.md
WEBBOT_OUTPUT_DIR/: latest
WEBBOT_OUTPUT_DIR/20260331_183810_newsycombinatorcom/: analysis.json  data.json  report.md
WEBBOT_OUTPUT_DIR/20260331_212037_breitbartcomeurope/: analysis.json  data.json  report.md
WEBBOT_OUTPUT_DIR/20260331_212709_test/: analysis.json  data.json  report.md
WEBBOT_OUTPUT_DIR/20260331_214002_pepe/: analysis.json  data.json  report.md
WEBBOT_OUTPUT_DIR/20260331_220021_theepochtimescom/: analysis.json  data.json  report.md
WEBBOT_OUTPUT_DIR/20260331_220611_xrp_newsapi/: analysis.json  data.json  report.md
WEBBOT_OUTPUT_DIR/20260401_021209_reasoncom/: data.json
WEBBOT_OUTPUT_DIR/20260401_025747_analysis/: analysis.json  data.json  report.md.tmp
src/predictive_ling_cli/: __init__.py  cli.py  graph_viewer.html  utils.py
src/predictive_ling_cli/analyzers/: llm_analyzer.py  temporal_detector.py
src/predictive_ling_cli/prompts/: webbot_analysis.md
src/predictive_ling_cli/reporting/: audio.py  json_output.py  markdown.py
src/predictive_ling_cli/scrapers/: myallies.py  news.py  reddit.py  twitter.py  web_scraper.py  youtube.py
src/webbot2_cli/: cli.py  graph_builder.py
src/webbot2_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/webbot2_cli/analyzers/: llm_analyzer.py
src/webbot2_cli/prompts/: event_stream.md  globe_pop.md  (+2 more)
(+9 files in other folders)
